@@ -153,6 +153,30 @@ NADataDef data_def_item [] = {
 				NULL,
 				N_( "<PATH|NAME>" ) },
 
+	/* icon used to be not localized up to and included 2.29.4
+	 */
+	{ NAFO_DATA_ICON_NOLOC,
+				TRUE,
+				FALSE,
+				FALSE,
+				"Unlocalized icon name or path",
+				"Unlocalized icon name or path",
+				NAFD_TYPE_STRING,
+				"",
+				FALSE,
+				FALSE,
+				FALSE,
+				FALSE,
+				FALSE,
+				"icon",
+				NULL,
+				0,
+				"icon",
+				0,
+				0,
+				NULL,
+				NULL },
+
 	{ NAFO_DATA_DESCRIPTION,
 				TRUE,
 				TRUE,
